config add library and config redux-toolkit

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,7 +29,7 @@
       "@theme/*": ["src/theme/*"]
     }
   },
-  "include": ["src"],
+  "include": ["src", "jest.config.ts"],
   "exclude": ["node_modules"],
   "references": [
     {
