--- a/.gitignore
+++ b/.gitignore
@@ -19,9 +19,13 @@ build
 # environment variables
 .env
 .env.local
+.env.development
 .env.development.local
 .env.test.local
 .env.production.local
+.env.production
+.env.*.production
+.env.*.local
 
 # misc
 .DS_Store
@@ -37,3 +41,4 @@ yarn-error.log*
 
 # .lock file
 yarn.lock
+package-lock.json
