--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "apexcharts": "^3.52.0",
     "axios": "^1.7.7",
     "dayjs": "^1.11.13",
+    "dotenv": "^16.4.5",
     "history": "^5.3.0",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
