--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,7 @@
     "forceConsistentCasingInFileNames": true,
     "paths": {
       "@app/*": ["src/*"],
-      "@components/*": ["src/components/*"],
+      "@components/*": ["src/common/components/*"],
       "@features/*": ["src/features/*"],
       "@hooks/*": ["src/hooks/*"],
       "@utils/*": ["src/utils/*"],
