--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "axios": "^1.7.7",
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
+    "firebase": "^10.14.1",
     "history": "^5.3.0",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
@@ -53,8 +54,10 @@
     "react-hook-form": "^7.53.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
+    "redux-persist": "^6.0.0",
     "simplebar-react": "^3.2.6",
-    "socket.io-client": "^4.7.5"
+    "socket.io-client": "^4.7.5",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.5.0",
