--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
     "redux-persist": "^6.0.0",
+    "sass": "^1.80.4",
     "simplebar-react": "^3.2.6",
     "socket.io-client": "^4.7.5",
     "yup": "^1.4.0"
