--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@mui/icons-material": "^6.1.0",
     "@mui/lab": "^5.0.0-alpha.173",
     "@mui/material": "^5.16.7",
+    "@mui/x-data-grid": "^7.22.0",
     "@reduxjs/toolkit": "^2.2.7",
     "apexcharts": "^3.52.0",
     "axios": "^1.7.7",
