--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "sass": "^1.80.4",
     "simplebar-react": "^3.2.6",
     "socket.io-client": "^4.7.5",
+    "uuid": "^11.0.2",
     "yup": "^1.4.0"
   },
   "devDependencies": {
