--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@mui/lab": "^5.0.0-alpha.173",
     "@mui/material": "^5.16.7",
     "@mui/x-data-grid": "^7.22.0",
+    "@mui/x-date-pickers": "^7.22.2",
     "@reduxjs/toolkit": "^2.2.7",
     "@tinymce/tinymce-react": "^5.1.1",
     "apexcharts": "^3.52.0",
