--- a/package.json
+++ b/package.json
@@ -27,74 +27,74 @@
   },
   "packageManager": "yarn@1.22.22",
   "dependencies": {
-    "@emotion/cache": "^11.13.5",
-    "@emotion/react": "^11.13.5",
-    "@emotion/styled": "^11.13.5",
-    "@fontsource-variable/dm-sans": "^5.1.0",
-    "@fontsource/barlow": "^5.1.0",
-    "@hookform/resolvers": "^3.9.1",
+    "@emotion/cache": "^11.13.1",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@fontsource-variable/dm-sans": "^5.0.7",
+    "@fontsource/barlow": "^5.0.14",
+    "@hookform/resolvers": "^3.9.0",
     "@iconify/react": "^5.0.2",
-    "@mui/icons-material": "^6.1.9",
-    "@mui/lab": "^6.0.0-beta.17",
-    "@mui/material": "^6.1.9",
-    "@mui/x-data-grid": "^7.22.3",
-    "@mui/x-date-pickers": "^7.22.3",
-    "@mui/x-date-pickers-pro": "^7.22.3",
+    "@mui/icons-material": "^6.1.5",
+    "@mui/lab": "^5.0.0-alpha.173",
+    "@mui/material": "^5.16.7",
+    "@mui/x-data-grid": "^7.22.0",
+    "@mui/x-date-pickers": "^7.22.2",
+    "@mui/x-date-pickers-pro": "^7.22.2",
     "@react-google-maps/api": "^2.20.3",
-    "@reduxjs/toolkit": "^2.4.0",
+    "@reduxjs/toolkit": "^2.2.7",
     "@tinymce/tinymce-react": "^5.1.1",
-    "apexcharts": "^4.1.0",
-    "axios": "^1.7.8",
+    "apexcharts": "^3.52.0",
+    "axios": "^1.7.7",
     "crypto-js": "^4.2.0",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
-    "firebase": "^11.0.2",
+    "firebase": "^10.14.1",
     "history": "^5.3.0",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
-    "react-apexcharts": "^1.6.0",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
-    "react-hook-form": "^7.53.2",
+    "react-hook-form": "^7.53.1",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^7.0.1",
+    "react-router-dom": "^6.26.1",
     "redux-persist": "^6.0.0",
-    "sass": "^1.81.0",
+    "sass": "^1.80.4",
     "simplebar-react": "^3.2.6",
-    "socket.io-client": "^4.8.1",
-    "uuid": "^11.0.3",
+    "socket.io-client": "^4.7.5",
+    "uuid": "^11.0.2",
     "yup": "^1.4.0"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/react": "^16.0.1",
-    "@types/jest": "^29.5.14",
-    "@types/node": "^22.10.1",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
-    "@typescript-eslint/eslint-plugin": "^8.16.0",
-    "@typescript-eslint/parser": "^8.16.0",
-    "@vitejs/plugin-react-swc": "^3.7.2",
-    "eslint": "^9.15.0",
+    "@types/jest": "^29.5.13",
+    "@types/node": "^22.5.0",
+    "@types/react": "^18.3.4",
+    "@types/react-dom": "^18.3.0",
+    "@typescript-eslint/eslint-plugin": "^7.18.0",
+    "@typescript-eslint/parser": "^7.18.0",
+    "@vitejs/plugin-react-swc": "^3.7.0",
+    "eslint": "^8.57.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^18.0.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-import-resolver-typescript": "^3.6.3",
-    "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-jsx-a11y": "^6.10.2",
-    "eslint-plugin-perfectionist": "^4.1.2",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jsx-a11y": "^6.9.0",
+    "eslint-plugin-perfectionist": "^2.11.0",
     "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-react": "^7.37.2",
-    "eslint-plugin-react-hooks": "^5.0.0",
-    "eslint-plugin-unused-imports": "^4.1.4",
+    "eslint-plugin-react": "^7.35.0",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-unused-imports": "^3.2.0",
     "jest": "^29.7.0",
-    "prettier": "^3.4.1",
+    "prettier": "^3.3.3",
     "ts-jest": "^29.2.5",
-    "typescript": "^5.7.2",
-    "vite": "^6.0.1",
-    "vite-plugin-checker": "^0.8.0"
+    "typescript": "^5.5.4",
+    "vite": "^5.4.2",
+    "vite-plugin-checker": "^0.7.2"
   }
 }
